--- a/css/styles.css
+++ b/css/styles.css
@@ -53,7 +53,7 @@ ul {
 nav {
     background-color: white;
     position: absolute;
-    z-index: 1000;
+    z-index: 1;
     top: 0;
     left: 0;
     width: 100vw;
@@ -61,18 +61,63 @@ nav {
     overflow: hidden;
     display: flex;
     justify-content: center;
-    transform: translateY(-100%);
-    opacity: 0;
-    transition: transform 1.5s ease,
+    opacity: 1;
+    transition: transform 0.5s ease,
                 opacity 1s ease;
+}
+
+nav ul {
+    color: red;
+    transform: translateY(-5%);
+    transition: transform 0.8s ease;
 }
 
 /*
     using the :target pseudo class to move the navbar header down when clicking the hamburger icon
 */
 nav:target {
+    z-index: 1000;
     transform: translateY(0);
     opacity: 1;
-    transition: transform 1.5s ease,
+    transition: transform 0.5s ease,
                 opacity 1s ease;
+    
+    ul {
+        color: blue;
+        transform: translateY(0);
+        transition: transform 0.8s ease;
+    }
+
+    .top-bar {
+        transform: translate(0, 11px) rotate(-45deg);
+    }
+
+    .middle-bar {
+        opacity: 0;
+    }
+
+    .bottom-bar {
+        transform: translate(0, -11px) rotate(45deg);
+    }
+}
+
+.nav-container {
+    width: 1.9rem;
+    height: 1.7rem;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    position: absolute;
+
+    .top-bar,
+    .middle-bar,
+    .bottom-bar {
+        background-color: black;
+        width: auto;
+        height: 5px;
+        border-radius: 5px;
+        transition: all 0.5s ease;
+    }
 }
